--- a/latex/Eda_lab06_report.tex
+++ b/latex/Eda_lab06_report.tex
@@ -30,8 +30,8 @@
 \newcommand{\faculty}{Facultad de Ingeniería de Producción y Servicios}
 \newcommand{\program}{Escuela Profesional de Ingeniería de Sistemas}
 \newcommand{\semester}{2024 - A}
-\newcommand{\course}{img/web_programming.png}
-\newcommand{\topic}{img/django_templates.png}
+\newcommand{\course}{img/data_structures.png}
+\newcommand{\topic}{img/skipList_and_splayTree.png}
 \newcommand{\professor}{Edson Luque Mamani}
 \newcommand{\students}{Jorge Luis Mamani Huarsaya\\Victor Narciso Mamani Anahua}
 \newcommand{\mydate}{27 de junio, 2024}
